[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Cars/death/25.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cars/death/3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cars/death/13.png" type="Texture" id=3]
[ext_resource path="res://Assets/Cars/death/12.png" type="Texture" id=4]
[ext_resource path="res://Assets/Cars/death/17.png" type="Texture" id=5]
[ext_resource path="res://Assets/Cars/death/18.png" type="Texture" id=6]
[ext_resource path="res://Assets/Cars/death/11.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sounds/snd_death.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Cars/death/0.png" type="Texture" id=9]
[ext_resource path="res://Assets/Cars/death/1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Cars/death/2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Cars/death/5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Cars/death/6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Cars/death/7.png" type="Texture" id=14]
[ext_resource path="res://Assets/Cars/death/8.png" type="Texture" id=15]
[ext_resource path="res://Assets/Cars/death/10.png" type="Texture" id=16]
[ext_resource path="res://Assets/Cars/death/14.png" type="Texture" id=17]
[ext_resource path="res://Assets/Cars/death/15.png" type="Texture" id=18]
[ext_resource path="res://Assets/Cars/death/16.png" type="Texture" id=19]
[ext_resource path="res://Assets/Cars/death/4.png" type="Texture" id=20]
[ext_resource path="res://Assets/Cars/death/9.png" type="Texture" id=21]
[ext_resource path="res://Assets/Cars/death/19.png" type="Texture" id=22]
[ext_resource path="res://Assets/Cars/death/21.png" type="Texture" id=23]
[ext_resource path="res://Assets/Cars/death/22.png" type="Texture" id=24]
[ext_resource path="res://Assets/Cars/death/23.png" type="Texture" id=25]
[ext_resource path="res://Assets/Cars/death/20.png" type="Texture" id=26]
[ext_resource path="res://Assets/Cars/death/24.png" type="Texture" id=27]
[ext_resource path="res://Scripts/death.gd" type="Script" id=28]
[ext_resource path="res://Assets/Cars/death/26.png" type="Texture" id=29]
[ext_resource path="res://Scenes/partFire.tscn" type="PackedScene" id=30]
[ext_resource path="res://Assets/Cars/img_toad.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 1 ), ExtResource( 29 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[node name="death" type="Node2D"]
script = ExtResource( 28 )

[node name="sprCar" type="Sprite" parent="."]
self_modulate = Color( 0.133333, 0.133333, 0.133333, 1 )
scale = Vector2( 4, 4 )
z_as_relative = false
texture = ExtResource( 31 )

[node name="partFire" parent="." instance=ExtResource( 30 )]
position = Vector2( 0, 0 )
emitting = true
amount = 24
emission_rect_extents = Vector2( 40, 60 )
initial_velocity = 250.0

[node name="sprExplosion" type="AnimatedSprite" parent="."]
position = Vector2( 17.6777, -18.3848 )
z_index = 11
frames = SubResource( 1 )

[node name="sndExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
autoplay = true
[connection signal="finished" from="sndExplosion" to="." method="_on_sndExplosion_finished"]
